--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,14 @@ implementation 'com.bucket4j:bucket4j_jdk17-redis-common:8.13.1'
 implementation 'com.bucket4j:bucket4j_jdk17-redisson:8.13.1'
 // https://mvnrepository.com/artifact/org.redisson/redisson-spring-boot-starter
 implementation 'org.redisson:redisson-spring-boot-starter:3.32.0'
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security
+implementation 'org.springframework.boot:spring-boot-starter-security:3.3.1'
+// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+implementation 'io.jsonwebtoken:jjwt:0.12.6'
+// https://mvnrepository.com/artifact/org.springframework.security/spring-security-crypto
+implementation 'org.springframework.security:spring-security-crypto:6.3.1'
+
+
 
 
 	implementation 'org.springframework.boot:spring-boot-starter-cache'
