--- a/compose.yaml
+++ b/compose.yaml
@@ -1,3 +1,5 @@
+
+
 services:
   postgres:
     image: 'postgres:latest'
@@ -11,3 +13,16 @@ services:
     image: 'redis:latest'
     ports:
       - 6379:6379
+#  backend:
+#    build:
+#      context: ./
+#      dockerfile: Dockerfile
+#    container_name: backend
+#    ports:
+#      - 8080:8080
+#    depends_on:
+#      - postgres
+#      - redis
+#    environment:
+#
+#    restart: on-failure:0
