--- a/src/main/resources/cache.properties
+++ b/src/main/resources/cache.properties
@@ -2,3 +2,5 @@
 translations.cache.duration = 30000
 translation.cache.duration = 30000
 image.cache.duration = 30000
+# 1h -> 3600000 ms
+bucket.cache.duration = 3600000 
