--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=translation
+spring.application.name=translations
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/mydatabase
 spring.datasource.username=myuser
@@ -12,3 +12,6 @@ spring.cache.type: redis
 spring.cache.host: localhost
 spring.cache.port: 6379
 spring.cache.redis.time-to-live: 3000
+
+
+translation.mapping:api/v1
