--- a/src/main/resources/translation-endpoint.properties
+++ b/src/main/resources/translation-endpoint.properties
@@ -1,3 +1,3 @@
 base.endpoint: api/v1
-findAll.endpoint: /translations
-findByKey.endpoint: /translation/{key}
+find.all.endpoint: /translations
+find.by.key.endpoint: /translation/{key}
