--- a/src/main/resources/image-endpoint.properties
+++ b/src/main/resources/image-endpoint.properties
@@ -1,3 +1,4 @@
 base.endpoint: api/v1
 find.image.by.name.endpoint: images/{name}
 image.base.url: http://localhost:8080/api/v1/images/
+create: /create 
