--- a/src/main/resources/translation-endpoint.properties
+++ b/src/main/resources/translation-endpoint.properties
@@ -1,3 +1,5 @@
 base.endpoint: api/v1
 find.all.endpoint: /translations
 find.by.key.endpoint: /translation/{key}
+create.text: /create-text
+create.image: /create-img
