Cache disable when null or empty list

--- a/src/main/resources/translation-endpoint.properties
+++ b/src/main/resources/translation-endpoint.properties
@@ -2,4 +2,4 @@ base.endpoint: api/v1
 find.all.endpoint: /translations
 find.by.key.endpoint: /translation/{key}
 create.text: /create-text
-create.image: /create-img
+create.image: /create-image
