--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.application.name=translations
 spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
 spring.datasource.username=test
 spring.datasource.password=testuser
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.main.allow-bean-definition-overriding=true
 
 
 #Spring REDIS Cache
