--- a/api-docs.yaml
+++ b/api-docs.yaml
@@ -47,129 +47,6 @@ paths:
             '*/*':
               schema:
                 type: string
-  /api/v1/undelete/{id}:
-    post:
-      tags:
-      - Translation
-      summary: Undelete translation
-      description: TBC
-      operationId: undelete
-      parameters:
-      - name: X-Market
-        in: header
-        description: "Custom market. Example: en-th"
-        schema:
-          type: string
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "500":
-          description: Oh nooo.. :(
-        "200":
-          description: Everything is fine
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/Translation"
-  /api/v1/status/{id}/{status}:
-    post:
-      tags:
-      - Translation
-      summary: Change translation status - Enabled/Disabled (true/false)
-      description: TBC
-      operationId: changeStatus
-      parameters:
-      - name: X-Market
-        in: header
-        description: "Custom market. Example: en-th"
-        schema:
-          type: string
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: status
-        in: path
-        required: true
-        schema:
-          type: boolean
-      responses:
-        "500":
-          description: Oh nooo.. :(
-        "200":
-          description: Everything is fine
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/Translation"
-  /api/v1/forward/{originalId}/{newId}:
-    post:
-      tags:
-      - Translation
-      summary: Forward translation
-      description: TBC
-      operationId: forward
-      parameters:
-      - name: X-Market
-        in: header
-        description: "Custom market. Example: en-th"
-        schema:
-          type: string
-      - name: originalId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: newId
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "500":
-          description: Oh nooo.. :(
-        "200":
-          description: Everything is fine
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/Translation"
-  /api/v1/forward/disable/{id}:
-    post:
-      tags:
-      - Translation
-      summary: Disable translation forwarding
-      description: TBC
-      operationId: disableForward
-      parameters:
-      - name: X-Market
-        in: header
-        description: "Custom market. Example: en-th"
-        schema:
-          type: string
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        "500":
-          description: Oh nooo.. :(
-        "200":
-          description: Everything is fine
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/Translation"
   /api/v1/create-text:
     post:
       tags:
@@ -217,6 +94,129 @@ paths:
             schema:
               $ref: "#/components/schemas/TranslationImageInsertBody"
         required: true
+      responses:
+        "500":
+          description: Oh nooo.. :(
+        "200":
+          description: Everything is fine
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Translation"
+  /api/v1/undelete/{id}:
+    patch:
+      tags:
+      - Translation
+      summary: Undelete translation
+      description: TBC
+      operationId: undelete
+      parameters:
+      - name: X-Market
+        in: header
+        description: "Custom market. Example: en-th"
+        schema:
+          type: string
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "500":
+          description: Oh nooo.. :(
+        "200":
+          description: Everything is fine
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Translation"
+  /api/v1/status/{id}/{status}:
+    patch:
+      tags:
+      - Translation
+      summary: Change translation status - Enabled/Disabled (true/false)
+      description: TBC
+      operationId: changeStatus
+      parameters:
+      - name: X-Market
+        in: header
+        description: "Custom market. Example: en-th"
+        schema:
+          type: string
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: status
+        in: path
+        required: true
+        schema:
+          type: boolean
+      responses:
+        "500":
+          description: Oh nooo.. :(
+        "200":
+          description: Everything is fine
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Translation"
+  /api/v1/forward/{originalId}/{newId}:
+    patch:
+      tags:
+      - Translation
+      summary: Forward translation
+      description: TBC
+      operationId: forward
+      parameters:
+      - name: X-Market
+        in: header
+        description: "Custom market. Example: en-th"
+        schema:
+          type: string
+      - name: originalId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      - name: newId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        "500":
+          description: Oh nooo.. :(
+        "200":
+          description: Everything is fine
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/Translation"
+  /api/v1/forward/disable/{id}:
+    patch:
+      tags:
+      - Translation
+      summary: Disable translation forwarding
+      description: TBC
+      operationId: disableForward
+      parameters:
+      - name: X-Market
+        in: header
+        description: "Custom market. Example: en-th"
+        schema:
+          type: string
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
       responses:
         "500":
           description: Oh nooo.. :(
@@ -383,6 +383,13 @@ components:
           items:
             type: integer
             format: int32
+    TranslationTextInsertBody:
+      type: object
+      properties:
+        key:
+          type: string
+        value:
+          type: string
     Translation:
       type: object
       properties:
@@ -395,13 +402,6 @@ components:
           enum:
           - TEXT
           - IMAGE
-    TranslationTextInsertBody:
-      type: object
-      properties:
-        key:
-          type: string
-        value:
-          type: string
     TranslationImageInsertBody:
       type: object
       properties:
