--- a/src/main/resources/interceptor.properties
+++ b/src/main/resources/interceptor.properties
@@ -1,3 +1,4 @@
-prefix: /api/v1/
-image: /images/
-translation: /translations
+#prefix: /api/v1/
+#image: /images/
+#translation: /translations
+market.regex: (\/[a-zA-Z]{2}-[a-zA-Z]{2}\/)
