--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,9 @@ implementation 'org.springframework.security:spring-security-crypto:6.3.4'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-core:3.11.2'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	runtimeOnly 'com.h2database:h2'
 }
 
 dependencyManagement {
